src/test/deca/context/invalid/resultats/test15_undefined-cont.res
./src/test/deca/context/invalid/test15_undefined.deca:16:1: Type identifier integer is not declared. 
